--- a/views/show.html
+++ b/views/show.html
@@ -16,6 +16,6 @@
     </dl>
   </div>
   <div class="col-md-6">
-    <img src="http://i.imgur.com/Ycq1VLR.gif">
+    <img ng-src="{{show.ta.imgUrl}}">
   </div>
 </div>
