--- a/views/table.html
+++ b/views/table.html
@@ -1,6 +1,7 @@
 <table class="table">
   <thead>
     <tr>
+      <th>Image</th>
       <th>Name</th>
       <th>Nick Name</th>
       <th>First Name</th>
@@ -13,6 +14,9 @@
     <tr class="hellofriends" ng-repeat="(id, person) in tas.data
       | filter:friendFilterQuery
       | orderBy:['current','-nickName']:friendReverse">
+      <td>
+        <img class="index--thumbnail" ng-src="{{person.imgUrl}}">
+      </td>
       <td>
         <span ng-hide="tas[id].editing" ng-dblclick="tas.editTA(person)">{{person.name}}</span>
         <input ng-show="tas[id].editing" ng-model="person.name">
