--- a/css/main.css
+++ b/css/main.css
@@ -1,50 +1,4 @@
-button, #submitButton {
-  padding: 5px 15px;
-  font-size: 20px;
-  border-radius: 8px;
-  border: 4px solid Gainsboro;
-  background-color: white;
-  color: Grey;
-}
-
-button:hover {
-  background-color: Gainsboro;
-  color: white;
-}
-
-#submit {
-  padding: 10px;
-}
-
-input {
-  padding: 10px;
-  margin: 10px;
-}
-
-h3 {
-  margin: 20px;
-  color: darkCyan;
-}
-
-table {
-  margin: 20px;
-}
-
-th {
-  color: indianRed;
-}
-
-th, td {
-  border: 2px solid Gainsboro;
-  padding: 5px;
-  font-size: 24px;
-  text-align: center;
-}
-
-td {
-  color: grey;
-}
-.thumbnail {
+.index--thumbnail {
   max-width: 50px;
   max-height: 50px;
 }
